--- a/index.html
+++ b/index.html
@@ -25,39 +25,51 @@
         </nav>
     </header>
 
-    <div class="container">
-        <div class="content">
-            <hr>
-            <h1><span>Jeferson Siqueira,</span><br>desenvolvedor web</h1>
-            <p>Meu nome é Jeferson Siqueira, sou desenvolvedor de websites. Desenvolvo sites conteudistas, informativos,
-                blogs, cardápios, e muito mais! Todos eles com a responsividade ideal, se adaptando para melhorar a
-                experiência do usuário e de seus clientes.</p>
-            <a href="http://api.whatsapp.com/send?phone=55619946758" target="_blank"><button class="btn">Contato</button></a>
-            <button class="btn">Portifólio</button>
+    <div class="container-home">
+        <div class="container">
+            <div class="content">
+                <hr>
+                <h1><span>Jeferson Siqueira,</span><br>desenvolvedor web</h1>
+                <p>Meu nome é Jeferson Siqueira, sou desenvolvedor de websites. Desenvolvo sites conteudistas, informativos,
+                    blogs, cardápios, e muito mais! Todos eles com a responsividade ideal, se adaptando para melhorar a
+                    experiência do usuário e de seus clientes.</p>
+                <a href="http://api.whatsapp.com/send?phone=55619946758" target="_blank"><button class="btn">Contato</button></a>
+                <button class="btn">Portifólio</button>
+            </div>
+        </div>
+
+        <div class="container-home-img">
+            <img src="jeferson-siqueira.png" alt="Desenvolvedor Jeferson Siqueira">
         </div>
     </div>
 
     <section>
-        <div class="container container-sobre">
-            <div class="content">
-                <hr>
-                <h1><span>O que você</span><br>precisa saber</h1>
-                <p>Existem vários tipos de projetos, e cada projeto possui uma forma e um tempo específico para ser
-                    desenvolvido.
-                </p><br>
-                <ul>
-                    <li class="txt-section">Site informativo</li>
-                    <p class="txt-decoration">Apenas conteúdo escrito, informações para serevem divulgadas para os
-                        clientes, como o <a href="https://pt.wikipedia.org/wiki/Wikip%C3%A9dia:P%C3%A1gina_principal"
-                            target="_blank">Wikipedia</a></p><br>
-                    <li class="txt-section">Blogs</li>
-                    <p class="txt-decoration">Conteúdo com postagens, galeria de fotos e vídeos, podemos utilizar como
-                        exemplo, sites de jornais ou de viagens</p><br>
-                    <li class="txt-section">Softwares</li>
-                    <p class="txt-decoration">Um site com ferramentas utilizáveis, podendo ser utilizadas tanto pelo
-                        usuário quanto pelo cliente, como o site do Ifood ou da <a
-                            href="https://www.magazineluiza.com.br/" target="_blank">Magazine luiza</a>.</p><br>
-                </ul>
+        <div class="container-home">
+            <div class="container container-sobre">
+                <div class="content">
+                    <hr>
+                    <h1><span>O que você</span><br>precisa saber</h1>
+                    <p>Existem vários tipos de projetos, e cada projeto possui uma forma e um tempo específico para ser
+                        desenvolvido.
+                    </p><br>
+                    <ul>
+                        <li class="txt-section">Site informativo</li>
+                        <p class="txt-decoration">Apenas conteúdo escrito, informações para serevem divulgadas para os
+                            clientes, como o <a href="https://pt.wikipedia.org/wiki/Wikip%C3%A9dia:P%C3%A1gina_principal"
+                                target="_blank">Wikipedia</a></p><br>
+                        <li class="txt-section">Blogs</li>
+                        <p class="txt-decoration">Conteúdo com postagens, galeria de fotos e vídeos, podemos utilizar como
+                            exemplo, sites de jornais ou de viagens</p><br>
+                        <li class="txt-section">Softwares</li>
+                        <p class="txt-decoration">Um site com ferramentas utilizáveis, podendo ser utilizadas tanto pelo
+                            usuário quanto pelo cliente, como o site do Ifood ou da <a
+                                href="https://www.magazineluiza.com.br/" target="_blank">Magazine luiza</a>.</p><br>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container-home-img">
+                <img src="Softwares-informativo-blog.png" alt="Softwares-informativo-blog">
             </div>
         </div>
 
